feat: 화면 상단 헤더 추가

--- a/Netflix/index.html
+++ b/Netflix/index.html
@@ -12,6 +12,12 @@
 </head>
 
 <body>
+    <header class="header">
+        <div class="header-content">
+            <img class="netflix-logo" src="assets/icon/logo.svg">
+            <img class="user-avatar" src="assets/icon/avatar.svg">
+        </div>
+    </header>
 
 </body>
 
