feat: 배너 화면 추가

--- a/Netflix/index.html
+++ b/Netflix/index.html
@@ -19,6 +19,23 @@
         </div>
     </header>
 
+    <section class="banner-section">
+        <img class="banner-video-image" src="assets/image/money_heist.jpg" alt="Banner Video">
+        <div class="banner-video-info-container">
+            <p class="video-title">Money Heist</p>
+            <div class="video-buttons">
+                <button class="video-button button-play">Play</button>
+                <button class="video-button button-my-list">My List</button>
+            </div>
+            <p class="video-description">To carry out the biggest heist in history, a mysterious man called The
+                Professor recruits a band
+                of eight robbers who have a single characteristic: n...</p>
+        </div>
+
+    </section>
+
+    
+
 </body>
 
 </html>
