feat :비디오섹션 css 추가

--- a/Netflix/index.html
+++ b/Netflix/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/video.css">
 </head>
 
 <body>
@@ -34,7 +35,28 @@
 
     </section>
 
-    
+    <main>
+        <section class="original-section">
+            <h3 class="original-section__title">Netfilx Originals</h3>
+            <div class="video-grid">
+                <div class="video-grid__item">
+                    <img src="assets/image/movie1.jpg" alt="video 1">
+                </div>
+                <div class="video-grid__item">
+                    <img src="assets/image/movie2.jpg" alt="video 2">
+                </div>
+                <div class="video-grid__item">
+                    <img src="assets/image/movie3.jpg" alt="video 3">
+                </div>
+                <div class="video-grid__item">
+                    <img src="assets/image/movie4.jpg" alt="video 4">
+                </div>
+                <div class="video-grid__item">
+                    <img src="assets/image/movie5.jpg" alt="video 5">
+                </div>
+            </div>
+        </section>
+    </main>
 
 </body>
 
