--- a/Netflix/index.html
+++ b/Netflix/index.html
@@ -36,8 +36,26 @@
     </section>
 
     <main>
-        <section class="original-section">
-            <h3 class="original-section__title">Netfilx Originals</h3>
+        <section class="video-section">
+            <h3 class="video-section__title">Netfilx Originals</h3>
+            <div class="video-grid">
+                <div class="video-grid__item">
+                    <img src="assets/image/movie1.jpg" alt="video 1">
+                </div>
+                <div class="video-grid__item">
+                    <img src="assets/image/movie2.jpg" alt="video 2">
+                </div>
+                <div class="video-grid__item">
+                    <img src="assets/image/movie3.jpg" alt="video 3">
+                </div>
+                <div class="video-grid__item">
+                    <img src="assets/image/movie4.jpg" alt="video 4">
+                </div>
+                <div class="video-grid__item">
+                    <img src="assets/image/movie5.jpg" alt="video 5">
+                </div>
+            </div>
+            <h3 class="video-section__title">Treading Now</h3>
             <div class="video-grid">
                 <div class="video-grid__item">
                     <img src="assets/image/movie1.jpg" alt="video 1">
