--- a/Netflix/index.html
+++ b/Netflix/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/header.css">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/banner.css">
     <link rel="stylesheet" href="styles/video.css">
 </head>
 
