remove: upper case 제거

--- a/Netflix/index.html
+++ b/Netflix/index.html
@@ -37,7 +37,7 @@
 
     <main>
         <section class="video-section">
-            <h3 class="video-section__title">Netfilx Originals</h3>
+            <h3 class="video-section__title">NETFLIX ORIGINALS</h3>
             <div class="video-grid">
                 <div class="video-grid__item">
                     <img src="assets/image/movie1.jpg" alt="video 1">
