feat: html에 아이템 갯수 추가

--- a/Netflix/index.html
+++ b/Netflix/index.html
@@ -32,7 +32,6 @@
                 Professor recruits a band
                 of eight robbers who have a single characteristic: n...</p>
         </div>
-
     </section>
 
     <main>
@@ -54,6 +53,15 @@
                 <div class="video-grid__item">
                     <img src="assets/image/movie5.jpg" alt="video 5">
                 </div>
+                <div class="video-grid__item">
+                    <img src="assets/image/movie1.jpg" alt="video 6">
+                </div>
+                <div class="video-grid__item">
+                    <img src="assets/image/movie2.jpg" alt="video 7">
+                </div>
+                <div class="video-grid__item">
+                    <img src="assets/image/movie3.jpg" alt="video 8">
+                </div>
             </div>
             <h3 class="video-section__title">Treading Now</h3>
             <div class="video-grid">
@@ -71,6 +79,15 @@
                 </div>
                 <div class="video-grid__item">
                     <img src="assets/image/movie5.jpg" alt="video 5">
+                </div>
+                <div class="video-grid__item">
+                    <img src="assets/image/movie1.jpg" alt="video 6">
+                </div>
+                <div class="video-grid__item">
+                    <img src="assets/image/movie2.jpg" alt="video 7">
+                </div>
+                <div class="video-grid__item">
+                    <img src="assets/image/movie3.jpg" alt="video 8">
                 </div>
             </div>
         </section>
